--- a/Mini_project_1_baseball_analytics_pt1.ipynb
+++ b/Mini_project_1_baseball_analytics_pt1.ipynb
@@ -41,27 +41,15 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "unable to open database file",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-64673cdf68d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#connecting the sqlite database to the notebook\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mconn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msqlite3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/srv/data/my_shared_data_folder/ba545-data/lahm an2016.sqlite\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m: unable to open database file"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#connecting the sqlite database to the notebook\n",
-    "conn = sqlite3.connect(\"/srv/data/my_shared_data_folder/ba545-data/lahm an2016.sqlite\")"
+    "conn = sqlite3.connect(\"/srv/data/my_shared_data_folder/ba545-data/lahman2016.sqlite\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
